# lcc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  EBNF.md  LICENSE  README.md  config.json  main.cpp  zip.sh
_codeql_build_dir/: CMakeCache.txt  Compiler  Makefile  cmake_install.cmake  compile_commands.json
_codeql_build_dir/src/: Makefile  cmake_install.cmake
article/: Optimization-Lab-Guide-01-Deliverables.md  Optimization-Lab-Guide-02-Pipeline.md  Optimization-Lab-Guide-03-IR-Semantics.md  Optimization-Lab-Guide-04-Measurement.md  Optimization-Lab-Guide-05-SSA-Mem2Reg.md  Optimization-Lab-Guide-06-SSA-Opt-Loop.md  Optimization-Lab-Guide-07-Loop-Opts.md  Optimization-Lab-Guide-08-PhiElim.md  Optimization-Lab-Guide-09-Backend-Peephole.md  Optimization-Lab-Guide-10-Arrays-Pointers.md  Optimization-Lab-Guide-11-Debugging.md
doc/: EBNF.md  IR_DESIGN.md  backend.md  compiler.md  ebnf.md  error.md  errorReporter.md  ir.md  lexer-design.md  lexer.md  optimize.md  overview.md  parser.md  semantic.md  summary.md
include/backend/: AsmGen.hpp  RegisterAllocator.hpp
include/codegen/: BasicBlock.hpp  CodeGen.hpp  Function.hpp  Instruction.hpp  Operand.hpp  QuadOptimizer.hpp
include/errorReporter/: ErrorReporter.hpp
include/lexer/: Lexer.hpp  Token.hpp
include/optimize/: CFGCleanup.hpp  DominatorTree.hpp  GlobalConstEval.hpp  Inliner.hpp  LICM.hpp  LoopAnalysis.hpp  LoopUnroll.hpp  Mem2Reg.hpp  PhiElimination.hpp
include/parser/: AST.hpp  Parser.hpp
include/semantic/: ErrorReporter.hpp  SemanticAnalyzer.hpp  Symbol.hpp  SymbolTable.hpp  Type.hpp
scripts/: test_mips.sh
src/: CMakeLists.txt
src/backend/: AsmGen.cpp  RegisterAllocator.cpp
src/codegen/: BasicBlock.cpp  CodeGen.cpp  Function.cpp  Instruction.cpp  Operand.cpp  QuadOptimizer.cpp
src/errorReporter/: ErrorReporter.cpp
src/lexer/: Lexer.cpp  lexer.cpp
src/optimize/: CFGCleanup.cpp  DominatorTree.cpp  GlobalConstEval.cpp  Inliner.cpp  LICM.cpp  LoopAnalysis.cpp  LoopUnroll.cpp  Mem2Reg.cpp  PhiElimination.cpp
src/parser/: Parser.cpp
src/semantic/: SemanticAnalyzer.cpp
